# rust-industrial-io

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  buildtst.sh  load_dummy.sh
.github/workflows/: ci.yml  rust.yml
examples/: iio_detect.rs  iio_free_scan.rs  iio_readraw.rs  readraw.rs  riio_bufavg.rs  riio_chan_info.rs  riio_detect.rs  riio_free_scan.rs  riio_readraw.rs  riio_scan.rs  riio_tsbuf.rs
libiio-sys/: Cargo.toml  README.md  build.rs
libiio-sys/bindings/: README.md  bindings-0.15.rs  bindings-0.18.rs  bindings-0.19_32.rs  bindings-0.19_64.rs  bindings-0.21_32.rs  bindings-0.21_64.rs  bindings-0.23.rs  bindings-0.23_32.rs  bindings-0.23_64.rs  bindings-0.24_32.rs  bindings-0.24_64.rs  bindings-0.25_32.rs  bindings-0.25_64.rs
libiio-sys/src/: lib.rs  wrapper.h
scripts/: load_dummy.sh
src/: buffer.rs  channel.rs  context.rs  device.rs  errors.rs  lib.rs  macros.rs  scan_context.rs
