[package]
name = "industrial-io"
version = "0.6.0"
edition = "2021"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
license = "MIT"
readme = "README.md"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]
description = """
Linux Industrial I/O (IIO) Support
"""

[dependencies]
libiio-sys = { version = "0.3", path = "libiio-sys" }
thiserror = "1.0"
nix = "0.25"
clap = { version = "3.2", features = ["cargo"], optional = true }

[dev-dependencies]
schedule_recv = "0.1"
chrono = { version = "0.4", default-features = false }
ctrlc = "3.2"
anyhow = "1.0"
clap = "2.34"

[features]
default = ["utilities"]
utilities = ["clap"]

# ----- Utilities -----

[[bin]]
name = "iio_info_rs"
required-features = ["utilities"]

[[bin]]
name = "riio_stop_all"
required-features = ["utilities"]
