[package]
name = "industrial-io"
version = "0.6.0"
edition = "2021"
rust-version = "1.63.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
license = "MIT"
readme = "README.md"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]
description = """
Linux Industrial I/O (IIO) Support
"""

[features]
default = ["utilities"]
utilities = ["clap"]

[dependencies]
libiio-sys = { version = "0.4", path = "libiio-sys" }
thiserror = "1.0"
nix = "0.26"
clap = { version = "3.2", features = ["cargo"], optional = true }

[dev-dependencies]
schedule_recv = "0.1"
chrono = { version = "0.4" }
clap = { version = "3.2", features = ["cargo"] }
ctrlc = "3.2"
anyhow = "1.0"

# ----- Utilities -----

[[bin]]
name = "iio_info_rs"
required-features = ["utilities"]

[[bin]]
name = "riio_stop_all"
required-features = ["utilities"]
