[package]
name = "libiio-sys"
version = "0.1.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
homepage = "https://github.com/fpagliughi/rust-industrial-io"
description = "Native, unsafe, bindings to the Linux libiio library"
license = "MIT"
links = "iio"
build = "build.rs"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]

[dependencies]
