[package]
name = "libiio-sys"
version = "0.4.0-pre.0"
edition = "2021"
rust-version = "1.63.0"
authors = ["Frank Pagliughi <fpagliughi@mindspring.com>"]
repository = "https://github.com/fpagliughi/rust-industrial-io"
homepage = "https://github.com/fpagliughi/rust-industrial-io"
license = "MIT"
links = "iio"
build = "build.rs"
keywords = ["linux", "embedded", "analog", "iio"]
categories = ["embedded", "hardware-support", "os", "os::unix-apis"]
description = "Native, unsafe, bindings to the Linux libiio library. Used by industrial-io."

[features]
default = ["libiio_v0_25"]
libiio_v0_25 = []
libiio_v0_24 = []
libiio_v0_23 = []
libiio_v0_21 = []
libiio_v0_19 = []

[dependencies]
